--- a/a.html
+++ b/a.html
@@ -45,6 +45,12 @@
           <span class="title-content-title">31省份新增确诊19例 本土2例在广东</span>
           <span class="title-content-mark c-text c-gap-left-small "></span>
         </a> -->
+        
+        <label>
+            <input type="checkbox" id="check1"><span>你喜欢夏天吗?</span></input>
+        </label>
+        <input type="checkbox" id="check1"><span>你喜欢夏天吗2?</span>
+
     </body>
     <script>
     </script>
