--- a/fixed.html
+++ b/fixed.html
@@ -7,6 +7,9 @@
         html, body, .parent-div{
             height: 100%;
         }
+      .parent-div{
+            height: 1000px;
+        }
         body {
             padding: 0px;
             margin: 0px;
