--- a/scriptSrc.html
+++ b/scriptSrc.html
@@ -27,14 +27,14 @@
                 if ('MutationObserver' in window) {
                     var observer = new MutationObserver(function (mutations) {
                         mutations.forEach(function (mutation) {
-				setTimeout(()=>{
+// 				setTimeout(()=>{
 					
 				    Array.from(document.querySelectorAll('script')).forEach(function (s) {
 					if (s.src && s.src.indexOf('?v=') === s.src.length - 3) {
 					    s.setAttribute('src', s.src + version);
 					}
 				    });
-				}, 5000)
+// 				}, 5000)
                         });
                     });
                     observer.observe(document.head, { childList: true });
@@ -51,6 +51,12 @@
              Demo script src
         </div>
     </body>
+	<script>
+		window.onload = () => {
+		debugger
+		}
+	
+	</script>
 	
 </html>
        
