--- a/scriptSrc.html
+++ b/scriptSrc.html
@@ -51,6 +51,7 @@
              Demo script src
         </div>
     </body>
+	<script type="text/javascript" src="https://cotadoronline.metlife.com.br/CotadorAgentsApp/cordova.js"></script>
 	<script>
 		window.onload = () => {
 		debugger
