--- a/sharedworker/index.html
+++ b/sharedworker/index.html
@@ -18,7 +18,7 @@
  function showNews(obj) {
    document.querySelector('.news').innerText = JSON.stringify(obj);
  }
- var work = new SharedWorker('./work/worker.js', 'work'),
+ var work = new SharedWorker('./worker.js', 'work'),
    worker = work.port;
  worker.start();
  worker.addEventListener('message', function (e) {
