--- a/documentwrite.html
+++ b/documentwrite.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>a link</title>
-      <script>window.jQuery||document.write('<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>')</script> 
+      <script>window.jQuery||document.write('<script src="https://code.jquery.com/jquery-3.5.1.min.js"><\/script>')</script> 
       
     </head>
     <body>
