--- a/documentwrite.html
+++ b/documentwrite.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>a link</title>
       <script>window.jQuery||document.write('<script src="https://code.jquery.com/jquery-3.5.1.min.js"><\/script>')</script> 
+        <script>document.write("<h1>Out with the old, in with the new!</h1>");</script>
       
     </head>
     <body>
