--- a/documentwrite.html
+++ b/documentwrite.html
@@ -5,6 +5,7 @@
         <title>a link</title>
       <script>window.jQuery||document.write('<script src="https://code.jquery.com/jquery-3.5.1.min.js"><\/script>')</script> 
         <script>document.write("<h1>Out with the old, in with the new!</h1>");</script>
+         <script>document.write("<style>Out with the old, in with the new!</style>")</script>
       
     </head>
     <body>
