--- a/form.html
+++ b/form.html
@@ -47,7 +47,9 @@
     <h1>Operate the element, it will record the log</h1>
     <form id="form1" action="./index.html" method="POST">
         First name: <input type="text" name="fname" onchange="firstNameChange()"><br>
-        Last name: <input type="password" name="lname" onchange="lastNameChange()"><br>
+        <input style="visibility: hidden;" type="password" autocomplete="new-password" name="lname2" onchange="lastNameChange()"><br>
+        <input style="visibility: hidden;" type="password" autocomplete="new-password" name="lname2" onchange="lastNameChange()"><br>
+        Last name: <input type="password" autocomplete="new-password" name="lname" onchange="lastNameChange()"><br>
         <input type="submit" value="Submit" onclick="formSubmit()">
       </form>
 
