--- a/audio/audioContext.html
+++ b/audio/audioContext.html
@@ -35,7 +35,7 @@
     <h1><a href="//webrtc.github.io/samples/" title="WebRTC samples homepage">WebRTC samples</a> <span>getUserMedia, audio only</span>
     </h1>
 
-    <audio id="gum-local" controls autoplay></audio>
+<!--     <audio id="gum-local" controls autoplay></audio> -->
 
     <p>设备采样率: <span id="tips"></span></p>
 
