--- a/throwError.html
+++ b/throwError.html
@@ -8,12 +8,12 @@
      throw new Error("error...throw after 5s")
     }, 5000)
   }
-  createError()
+//   createError()
   
   function createError2(){
      throw new Error("error...throw2 executed immediately")
   }
-  createError2()
+//   createError2()
   
   function sss(){
     return Promise.reject("throw...error222")
