--- a/throwError.html
+++ b/throwError.html
@@ -18,12 +18,20 @@
   function sss(){
     return Promise.reject("throw...error222")
   }
+  
+  
+  function sss2(){
+    let a = null
+    if(a.lenght > 0){
+    }
+  }
 
 </script>
 </head>
 
 <body>
 <h1 onclick="sss()">Hello World !</h1>
+<h1 class="h1-hw" onclick="sss2()">Hello World2 !</h1>
   
 </body>
 </html>
