--- a/throwError.html
+++ b/throwError.html
@@ -26,12 +26,17 @@
     }
   }
 
+  function sss3(){
+    window.open("https://github.com/wucheng666/demoHtml/blob/gh-pages/throwError.html")
+  }
 </script>
 </head>
 
 <body>
 <h1 onclick="sss()">Hello World !</h1>
 <h1 class="h1-hw" onclick="sss2()">Hello World2 !</h1>
+<h1 class="h1-hw" onclick="sss3()">open new page</h1>
+ 
   
 </body>
 </html>
