--- a/throwError.html
+++ b/throwError.html
@@ -35,7 +35,7 @@
 <body>
 <h1 onclick="sss()">Hello World !</h1>
 <h1 class="h1-hw" onclick="sss2()">Hello World2 !</h1>
-<h1 class="h1-hw" onclick="sss3()">open new page</h1>
+<h1 class="newpage" onclick="sss3()">open new page</h1>
  
   
 </body>
