--- a/throwError.html
+++ b/throwError.html
@@ -27,7 +27,7 @@
   }
 
   function sss3(){
-    window.open("https://github.com/wucheng666/demoHtml/blob/gh-pages/throwError.html")
+    window.open("https://wucheng666.github.io/demoHtml/throwError.html")
   }
 </script>
 </head>
