--- a/hammer/manual/visual.html
+++ b/hammer/manual/visual.html
@@ -126,7 +126,7 @@
     }
 
     function logEvent(str) {
-        //log.insertBefore(document.createTextNode(str +"\n"), log.firstChild);
+        log.insertBefore(document.createTextNode(str +"\n"), log.firstChild);
     }
 
     function onPan(ev) {
