--- a/hammer/manual/visual.html
+++ b/hammer/manual/visual.html
@@ -80,7 +80,7 @@
 
     mc.on("hammer.input", function(ev) {
         if(ev.isFinal) {
-            resetElement();
+           // resetElement();
         }
     });
 
