--- a/hammer/multiple.html
+++ b/hammer/multiple.html
@@ -73,7 +73,7 @@
         }
         
         function onPan(ev) {
-            el.className = '';
+//             el.className = '';
             transform.translate = {
                 x: START_X + ev.deltaX,
                 y: START_Y + ev.deltaY
