--- a/hammer/multiple.html
+++ b/hammer/multiple.html
@@ -30,9 +30,19 @@
             height: 60px;
             background: pink;
         }
+        
         .content {
             background: lightblue;
             flex:1;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .content .dscontent{
+            background: #eee;
+            height: 200px;
+            width: 100%;
         }
         .footer {
             height: 60px;
@@ -43,14 +53,16 @@
 <body>
     <div class="container">
         <div class="header">navigation</div>
-        <div id="content" class="content"></div>
+        <div id="content" class="content">
+            <div id="dscontent" class="dscontent"></div>
+        </div>
         <div class="footer"></div>
     </div>
     <script src="hammer.js"></script>
     <script>
         var transform;
         var ticking = false;
-        var el = document.getElementById("content")
+        var el = document.getElementById("dscontent")
         var START_X = Math.round((window.innerWidth - el.offsetWidth) / 2);
         var START_Y = Math.round((window.innerHeight - el.offsetHeight) / 2);
         function initHammer(el){
