--- a/hammer/multiple.html
+++ b/hammer/multiple.html
@@ -51,8 +51,8 @@
             height: 200px;
             width: 100%;
             border: 1px solid #000;
-            background-image: url("./bkg.jpeg");
-            background-size: 100%;
+            background-image: url("./bkg2.jpeg");
+            background-size: 100% 100%;
         }
         .footer {
             height: 60px;
