--- a/hammer/multiple.html
+++ b/hammer/multiple.html
@@ -82,7 +82,7 @@
         <div class="header">navigation</div>
         <div id="content" class="content">
             <div id="dscontent" class="dscontent"></div>
-<!--             <div class="center-pointer"></div> -->
+            <div class="center-pointer"></div>
         </div>
         <div class="footer"></div>
     </div>
@@ -399,9 +399,9 @@ function point2D(x,y){
             }
 
             //center point
-            let centerP = document.querySelector(".center-pointer")
-            centerP.style.top = ev.center.y + "px"
-            centerP.style.left = ev.center.x + "px"
+//             let centerP = document.querySelector(".center-pointer")
+//             centerP.style.top = ev.center.y + "px"
+//             centerP.style.left = ev.center.x + "px"
             
             tMatrix[0] = tMatrix[3] = initScale * ev.scale;
             tMatrix[4] = (1 - ev.scale) * poscenter.x + lastTranslate.x
