--- a/hammer/multiple.html
+++ b/hammer/multiple.html
@@ -82,7 +82,7 @@
         <div class="header">navigation</div>
         <div id="content" class="content">
             <div id="dscontent" class="dscontent"></div>
-<!--             <div class="center-pointer"></div> -->
+<!--             <div class="center-pointer">footer</div> -->
         </div>
         <div class="footer"></div>
     </div>
