--- a/hammer/multiple.html
+++ b/hammer/multiple.html
@@ -384,6 +384,8 @@ function point2D(x,y){
             }
 
             // duration = "100s ease all";
+		
+            el.className = el.className + ' animate';
 
             requestElementUpdate("pinchend");
         }
