--- a/hammer/multiple.html
+++ b/hammer/multiple.html
@@ -84,7 +84,7 @@
             <div id="dscontent" class="dscontent"></div>
 <!--             <div class="center-pointer">footer</div> -->
         </div>
-        <div class="footer"></div>
+        <div class="footer">footer</div>
     </div>
     <script src="hammer.js"></script>
     
