--- a/hammer/multiple.html
+++ b/hammer/multiple.html
@@ -385,7 +385,7 @@ function point2D(x,y){
 
             // duration = "100s ease all";
 		
-            el.className = el.className + ' animate';
+//             el.className = el.className + ' animate';
 
             requestElementUpdate("pinchend");
         }
